--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,37 @@
 @import "tailwindcss";
+@plugin "flowbite-react/plugin/tailwindcss";
+@source "../../.flowbite-react/class-list.json";
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
+  --black: #212121;
+  --green: #96FC04;
+  --white: #ffffff;
 
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-green: var(--green);
+  --color-black: var(--black);
+  --color-white: var(--white);
+  --text-desc: 24px;
+  --text-title: 88px;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #ffffff;
     --foreground: #ededed;
+    --black: #212121;
+    --green: #96FC04;
+    --white: #ffffff;
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  border-color: var(--black);
 }
